--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,33 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding-left: 20px;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+input{
+  margin-bottom: 30px;
+}
+
+.timer {
+  display: flex;
+  gap: 30px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.value {
+  font-size: 50px;
+  font-weight: 500; 
+}
+
+.label {
 }
